--- a/1)Notes/15-Flask Framework/templates/form.html
+++ b/1)Notes/15-Flask Framework/templates/form.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Submit a form</h1>
     <form method="post">
-        <label for="name">Name</label>
+        <label for="name">Name: </label>
         <input type="text" id="name" name="'name"
         <input type="submit" value="Submit">
     </form> 
