--- a/1)Notes/15-Flask Framework/templates/result1.html
+++ b/1)Notes/15-Flask Framework/templates/result1.html
@@ -10,6 +10,7 @@
             <th>{{ key }}</th>
             <tr>{{value}}</tr>
            </tr>
+           {% endfor %}
         </table>
     </body>
 </html>
