--- a/1)Notes/15-Flask Framework/templates/result1.html
+++ b/1)Notes/15-Flask Framework/templates/result1.html
@@ -1,16 +1,14 @@
-<html>
+
     <h2>
         final result
     </h2>
     <body>
-        <table border=2>
+        
            {% for key,value in result.item() %} 
-           <tr>
+           
             {# This is comment section #}
-            <th>{{ key }}</th>
-            <tr>{{value}}</tr>
-           </tr>
+            {{ key }}
+            {{value}}
+           
            {% endfor %}
-        </table>
     </body>
-</html>
