--- a/1)Notes/15-Flask Framework/templates/getresult.html
+++ b/1)Notes/15-Flask Framework/templates/getresult.html
@@ -11,7 +11,7 @@
 
 <h2>HTML Forms</h2>
 
-<form action="/submit" method='post'>
+<form action="/form" method='post'>
   <label for="Science">Science:</label><br>
   <input type="text" id="science" name="science" value="0"><br>
   <label for="Maths">Maths:</label><br>
@@ -24,6 +24,7 @@
 </form> 
 
 <p>If you click the "Submit" button, the form-data will be sent to a page called "/submit".</p>
+<br>the average marks is {{score}}</br>
 
 </body>
 </html>
